flux-clusters/piserver/apps/nextcloud/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: flux-system
      sectionName: websecure # only for https traffic
  hostnames:
    - "cloud.kellehorreur.de"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
